--- a/AUTHORS
+++ b/AUTHORS
@@ -7,5 +7,6 @@ Pat Riley <pfr@cs.cmu.edu>
 Tom Howard <tomhoward@users.sf.net>
 Heni Ben Amor <amor@uni-koblenz.de>
 Irene Markelic <irene@markelic.de>
+Jan Murray <murray@uni-koblenz.de>
 
 Also see files ChangeLog and THANKS.
