*** empty log message ***

--- a/THANKS
+++ b/THANKS
@@ -14,3 +14,7 @@ Patrick Riley <pfr+@cs.cmu.edu>
 Christoph Ringelstein <cringel@uni-koblenz.de>
 Kenny Tilton <ktilton@nyc.rr.com>
 Micha Gollin <gollin@informatik.hu-berlin.de>
+Alexey Vasilyev <servent@apollo.lv>
+Aria3D simulation team <robotics@ce.aut.ac.ir>
+liyang <subwood@ustc.edu>
+Michel Tokic
