--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,6 @@ Tom Howard <tomhoward@users.sf.net>
 Heni Ben Amor <amor@uni-koblenz.de>
 Irene Markelic <irene@markelic.de>
 Jan Murray <murray@uni-koblenz.de>
+Joschka Bödecker <jboedeck@uni-koblenz.de>
 
 Also see files ChangeLog and THANKS.
