--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-14  Joschka Boedecker  <jboedeck@uni-koblenz.de>
+
+	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
+	- Made a fix to ensure UpdateCachedInternal is only called once in
+	  play mode Before_KickOff. This seems to fix the bug causing the
+	  server to crash in this play mode (crossing my fingers ;)) and
+	  eliminates the ruby error warnings.	
+
 2004-06-13  Oliver Obst  <fruit@robolog.org>
 
 	* released rcssserver3D-0.3
