*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,6 @@ Heni Ben Amor <amor@uni-koblenz.de>
 Irene Markelic <irene@markelic.de>
 Jan Murray <murray@uni-koblenz.de>
 Joschka Bödecker <jboedeck@uni-koblenz.de>
+Christoph Ringelstein <cringel@uni-koblenz.de>
 
 Also see files ChangeLog and THANKS.
