--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-17  Christoph Ringelstein  <cringel@uni-koblenz.de>
+
+	* app/rcssmonitor3d/lite/monitor.cpp: 
+	- Added usleep(10) while (busy) waiting for new server msg.
+
 2004-06-14  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
