2004-12-20	Tom Howard	<tomhoward@users.sf.net>
	* ./acinclude.m4
	* ./configure.ac
	* ./app/agenttest/Makefile.am
	* ./app/rcssmonitor3d/lib/commserver.cpp
	* ./doc/Makefile.am
	* ./doc/devel/Makefile.am
	* ./doc/users/Makefile.am
	* ./lib/oxygen/simulationserver/netcontrol.cpp
	* ./plugin/soccer/beameffector/beameffector.cpp
	* ./utility/rcssnet/exception.cpp
	Initial OS X port

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+[0.x.x]
+This release has been ported to OS X.  Besides the normal
+requirements, it requires an X server to be installed on the machine,
+along with a glut library for X windows.
+
 [0.3]
 This release is intended to be used as official version on RoboCup 2004.
 With respect to the soccer rules, this release mainly fixes some bugs contained
