--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-12-20	Tom Howard	<tomhoward@users.sf.net>
+
+	* ./acinclude.m4
+	* ./configure.ac
+	* ./app/agenttest/Makefile.am
+	* ./app/rcssmonitor3d/lib/commserver.cpp
+	* ./doc/Makefile.am
+	* ./doc/devel/Makefile.am
+	* ./doc/users/Makefile.am
+	* ./lib/oxygen/simulationserver/netcontrol.cpp
+	* ./plugin/soccer/beameffector/beameffector.cpp
+	* ./utility/rcssnet/exception.cpp
+	Initial OS X port
+
 2004-10-04  Markus Rollmann  <rollmark@uni-koblenz.de>
 
 	* app/agenttest/commserver.cpp:
