--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-04  Oliver Obst  <fruit@robolog.org>
+
+	* configure.ac: checking for netdb.h
+
+	* utility/rcssnet/exception.cpp: including config.h
+
 2004-12-22  Markus Rollmann  <rollmark@uni-koblenz.de>
 
 	* lib/kerosin/renderserver/rendercontrol.cpp:
