--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-14  Jan Murray  <fruit@robolog.org>
+
+	* app/simulator/rcsoccersim3D.in:
+	added options -h (usage message) and -light to force use of
+	light monitor, even if kerosin is present.
+	(Needed for backward compatibility) 
+
 2005-01-04  Oliver Obst  <fruit@robolog.org>
 
 	* configure.ac: checking for netdb.h
