--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-24  Oliver Obst  <fruit@robolog.org>
+
+	* plugin/soccer/sexpmonitor/sexpmonitor.cpp: 
+	- added rotation matrix to agent nodes in the monitor protocol
+
 2005-01-14  Jan Murray  <fruit@robolog.org>
 
 	* app/simulator/rcsoccersim3D.in:
