--- a/THANKS
+++ b/THANKS
@@ -18,3 +18,5 @@ Alexey Vasilyev <servent@apollo.lv>
 Aria3D simulation team <robotics@ce.aut.ac.ir>
 liyang <subwood@ustc.edu>
 Michel Tokic
+Hesham Ebrahimi <heshamebrahimi@gmail.com>
+
