--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-02  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
+	* app/monitorspark/Makefile.am,
+	* app/simspark/Makefile.am: 
+	- included several ruby and rsg files for distribution
+
 	* app/simulator/rcssserver3D.rb: 
 	- added soccer variable indicating whether only
 	  a single half time should be played.
