- added a Makefile for the TeX manual - added manual.pdf to the list of distributed files

--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx,color}
 \usepackage{latexsym}
 \usepackage{listings}
-\usepackage{psfig}
+% \usepackage{psfig}
 \usepackage{url}
 \usepackage[breaklinks]{hyperref}
 \usepackage{hyperref}
@@ -23,9 +23,9 @@
 \input{monitor}
 \input{scenelang}
 
-\clearpage
-\bibliographystyle{unsrt}
-\bibliography{manual}
+% \clearpage
+% \bibliographystyle{unsrt}
+% \bibliography{manual}
 
 \end{document}
 
