--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-08  Joschka Boedecker  <jboedeck@uni-koblenz.de>
+
+	* lib/oxygen/physicsserver/universaljoint_c.cpp: 
+	- corrected a bug in function setAxis2 (wrong axis
+	  was set)
+
 2006-01-05  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* lib/oxygen/physicsserver/universaljoint_c.cpp: 
