Added Jackson Matsuura

--- a/THANKS
+++ b/THANKS
@@ -19,4 +19,4 @@ Aria3D simulation team <robotics@ce.aut.ac.ir>
 liyang <subwood@ustc.edu>
 Michel Tokic
 Hesham Ebrahimi <heshamebrahimi@gmail.com>
-
+Jackson Matsuura <jackson@ita.br>
